8024804: Crash when InterfaceMethodref resolves to Object.registerNatives

Added check for NULL prior to continuation of method look up to avoid runtime crash during look up of Object's superclass' methods.

Reviewed-by: coleenp, hseigel